[package]
name = "decoupled-glutin-example"
version = "0.1.0"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = [
    "glutin-winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-notitle",
]

[dependencies]
raw-window-handle = "0.5"
winit = "0.28"
glutin = "0.30"
glutin-winit = "0.3"
skia-safe = { version = "0.56", features = ["textlayout", "gl"] }

[target.'cfg(unix)'.dependencies]
skia-safe = { version = "0.56", features = ["textlayout", "gl", "x11"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7" # Keep in sync with winit dependency

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"
