[package]
name = "skia-winit-renderer"
version = "0.1.0"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = [
    "glutin-winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-notitle",
]

[dependencies]
raw-window-handle = "0.5"
winit = "0.28"
softbuffer = "0.2"
glutin = "0.30"
glutin-winit = "0.3"
skia-safe = { version = "0.60", features = ["textlayout", "gl"] }

[target.'cfg(unix)'.dependencies]
skia-safe = { version = "0.60", features = ["textlayout", "gl", "x11"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7" # Keep in sync with winit dependency

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"
